--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
       MARIADB_PASSWORD: $MARIADB_PASSWORD
       MARIADB_DATABASE: $MARIADB_DATABASE
     volumes:
-      - ./db/dbData:/var/lib/mariadb
+      - ./db:/var/lib/mariadb
     ports:
       #- "5000:3306"
       - "3306:3306"
