[fix] Fix for working api container starting the api on port 3001 at container creation.
The api was not starting correctly when launching npm start at the end of
the Dockerfile. Setting the command in the docker-compose.yaml file fixed
the problem. # Please enter the commit message for your changes. Lines
starting

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -16,3 +16,15 @@ services:
     ports:
       #- "5000:3306"
       - "3306:3306"
+
+  api:
+    build: ./api
+    container_name: api
+    restart: unless-stopped
+    volumes:
+      - ./api:/api
+    ports:
+      - "3001:3001"
+    depends_on:
+      - mariadb
+    command: "npm start"
