[fix] Fixing CORS problem and POST with empty body
CORS didn't allow calls to API (worked before so don't know why). Also, problem with the post /monitoring_data that had an empty body.

Allowed CORS origin to all (only for dev. Need to change in production). For post had problem beceause I didn't use axios.post() but
axios().

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -50,6 +50,7 @@ services:
     #command: "npm start"
     networks:
       - front-api
+    #network_mode: "host" # for dev purposes, so -> NO # check
 
 networks:
     api-db:
