--- a/webapp/api/package.json
+++ b/webapp/api/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie": "^0.5.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mariadb": "^3.1.1",
     "mysql": "^2.18.1"
