[fix] Event scheduler was not on
First tried using "SET GLOBAL event_scheduler = ON;" in a sql script in docker-entrypoint-initdb.d directory. It didn't work. I
finally created a nex my.cnf configuration file (volume). With "event_scheduler = ON".

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -15,11 +15,14 @@ services:
     volumes:
       - ./db/dbData:/var/lib/mariadb
       - ./db/dbScripts:/docker-entrypoint-initdb.d
+      - ./db/my.cnf:/etc/mysql/my.cnf
     ports:
       #- "5000:3306"
       - "3306:3306"
     networks:
       - api-db
+    
+    
 
   api:
     build: ./api
