--- a/webapp/api/package.json
+++ b/webapp/api/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "mariadb": "^3.1.1",
     "mysql": "^2.18.1"
