[refactor] Changing docker volumes and copy in dockerfiles
Before, had a problem with argon2 library beceause we copied the package.json and npm installed all packages. When using the volumes in docker
compose the /node_modules tree was modified, causing a problem. Had deleted the volumes and copied every file in dockerfiles. But I had to rebuild
every image (docker compose build) at each chanhe for it to be effective.

Now we have volumes back but we do not take /node_modules in the volumes (for each docker container).
 # Please enter the commit message for your changes. Lines starting

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -28,8 +28,9 @@ services:
     build: ./api
     container_name: api
     restart: always
-    #volumes:
-     # - ./api:/api
+    volumes:
+      - ./api:/api
+      - /api/node_modules/
     ports:
       - "3001:3001" # to allow testing from postman
     depends_on:
@@ -37,28 +38,30 @@ services:
     command: "npm start"
     networks:
       - api-db
-#      - front-api
+      - front-api
 
-#  frontend:
-#    build : ./client
-#    container_name: frontend
-#    restart: always
-#    #volumes : 
-#     # - ./client:/client
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#    depends_on:
-#      - mariadb 
-#      - api
-#    #command: "npm start"
-#    networks:
-#      - front-api
-#    #network_mode: "host" # for dev purposes, so -> NO # check
+
+  frontend:
+    build : ./client
+    container_name: frontend
+    restart: always
+    volumes : 
+      - ./client:/client
+      - /client/node_modules/
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mariadb 
+      - api
+    #command: "npm start"
+    networks:
+      - front-api
+    #network_mode: "host" # for dev purposes, so -> NO # check
+
 
 networks:
     api-db:
       driver: bridge
-#    front-api:
-#      driver: bridge
+    front-api:
+      driver: bridge
     
