--- a/webapp/api/package.json
+++ b/webapp/api/package.json
@@ -14,6 +14,7 @@
     "cookie": "^0.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "mariadb": "^3.1.1",
