--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -35,6 +35,7 @@ services:
       - /api/node_modules/
     ports:
       - "3001:3001" # to allow testing from postman
+      - "443:443" #HTTPS
     depends_on:
       - mariadb
     command: "npm start"
