[feat] Adding HTTPS for frontend (dev)
Adding new volume for frontend container to acces the letsencrypt certificates. Using thoses files inside script to launch react app.

Might need to deploy React app on NGINX instead of using node beceause the technique used for implementing HTTPS is considered as "HTTPS for development".

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
       - /etc/letsencrypt/archive/www.alexandre.doneux.eu:/etc/letsencrypt/archive/www.alexandre.doneux.eu
       - /api/node_modules/
     ports:
-      - "3001:3001" # to allow testing from postman
+      #- "3001:3001" # to allow testing from postman
       - "8443:443" #HTTPS
     depends_on:
       - mariadb
@@ -49,6 +49,7 @@ services:
     restart: always
     volumes : 
       - ./client:/client
+      - /etc/letsencrypt/archive/www.alexandre.doneux.eu:/etc/letsencrypt/archive/www.alexandre.doneux.eu
       - /client/node_modules/
     ports:
       - "80:80"
