[fix] Giving environnement variables through docker compose file and .env in webapp directory

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -47,6 +47,11 @@ services:
     build : ./client
     container_name: frontend
     restart: always
+    env_file: 
+      - ./.env
+    environment:
+      CERT-PATH: $CERT-PATH
+      KEY-PATH: $KEY-PATH
     volumes : 
       - ./client:/client
       - /etc/letsencrypt/archive/www.alexandre.doneux.eu:/etc/letsencrypt/archive/www.alexandre.doneux.eu
