--- a/webapp/.env
+++ b/webapp/.env
@@ -2,3 +2,6 @@ MARIADB_ROOT_PASSWORD=root
 MARIADB_USER=user
 MARIADB_PASSWORD=mypassword
 MARIADB_DATABASE=my_database
+
+CERT-PATH="/etc/letsencrypt/archive/www.alexandre.doneux.eu/cert1.pem"
+KEY-PATH="/etc/letsencrypt/archive/www.alexandre.doneux.eu/privkey1.pem"
