[fix] Replacing "-" with "_" in environnement variables

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -50,8 +50,8 @@ services:
     env_file: 
       - ./.env
     environment:
-      CERT-PATH: $CERT-PATH
-      KEY-PATH: $KEY-PATH
+      CERT_PATH: $CERT_PATH
+      KEY_PATH: $KEY_PATH
     volumes : 
       - ./client:/client
       - /etc/letsencrypt/archive/www.alexandre.doneux.eu:/etc/letsencrypt/archive/www.alexandre.doneux.eu
