[fix] Using only string inside script for SSL certificate paths
Couldn't use .env variables. Didn't work. Will maybe check later.

--- a/webapp/.env
+++ b/webapp/.env
@@ -3,5 +3,5 @@ MARIADB_USER=user
 MARIADB_PASSWORD=mypassword
 MARIADB_DATABASE=my_database
 
-CERT_PATH="/etc/letsencrypt/archive/www.alexandre.doneux.eu/cert1.pem"
-KEY_PATH="/etc/letsencrypt/archive/www.alexandre.doneux.eu/privkey1.pem"
+#CERT_PATH="/etc/letsencrypt/archive/www.alexandre.doneux.eu/cert1.pem"
+#KEY_PATH="/etc/letsencrypt/archive/www.alexandre.doneux.eu/privkey1.pem"
