[fix] removing env variables for frontend inside docker-compose.yaml
Can't have environnement part without variables.

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -49,7 +49,7 @@ services:
     restart: always
     env_file: 
       - ./.env
-    environment:
+    #environment:
       #CERT_PATH: $CERT_PATH
       #KEY_PATH: $KEY_PATH
     volumes : 
