--- a/webapp/client/Dockerfile
+++ b/webapp/client/Dockerfile
@@ -17,7 +17,7 @@ RUN npm install
 #RUN npm run build
 
 # Expose port 3000 for the application
-EXPOSE 3000
+#EXPOSE 3000
 
 # Start the application
 CMD ["npm", "start"]
