[fix] Trying something else for ports

--- a/webapp/client/.env
+++ b/webapp/client/.env
@@ -1,1 +1,2 @@
-PORT=443
+PORT=80
+#PORT=443 #en mettant ça avec le env file dans le docker_compose.yaml un browser trouve le serveur mais ne peux pas établir une communication sécurisée
