--- a/webapp/client/Dockerfile
+++ b/webapp/client/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node.js runtime as a parent image
-FROM node:18.14-alpine
+FROM node:18.14-alpine as builder
 
 # Set the working directory to /app
 WORKDIR /client
@@ -13,11 +13,21 @@ RUN npm install
 # Copy the rest of the application code to the working directory
 #COPY . .
 
-# Build the React app
-#RUN npm run build
+# Build the React app to use for NGINX
+RUN npm run build
+
+FROM nginx:alpine
+
+COPY ./.nginx/nginx.conf /etc/nginx/nginx.conf
+## Remove default nginx index page
+RUN rm -rf /usr/share/nginx/html/*
+
+COPY --from=builder /client/build /usr/share/nginx/html
 
 # Expose port 3000 for the application
-#EXPOSE 3000
+EXPOSE 80 443
 
-# Start the application
-CMD ["npm", "start"]
+# Start the application -> no more running a node server. We want to run everything on a NGINX server 
+#CMD ["npm", "start"]
+
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
