[feat] npm run build and copy of build at the start of the container

--- a/webapp/client/Dockerfile
+++ b/webapp/client/Dockerfile
@@ -14,7 +14,7 @@ RUN npm install
 #COPY . .
 
 # Build the React app to use for NGINX
-RUN npm run build
+##RUN npm run build
 
 FROM nginx:alpine
 
@@ -22,7 +22,7 @@ COPY ./.nginx/nginx.conf /etc/nginx/nginx.conf
 ## Remove default nginx index page
 RUN rm -rf /usr/share/nginx/html/*
 
-COPY --from=builder /client/build /usr/share/nginx/html
+##COPY --from=builder /client/build /usr/share/nginx/html
 
 # Expose port 3000 for the application
 EXPOSE 80 443
@@ -30,4 +30,8 @@ EXPOSE 80 443
 # Start the application -> no more running a node server. We want to run everything on a NGINX server 
 #CMD ["npm", "start"]
 
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+
+
+ENTRYPOINT ["npm", "run", "build", \\
+            "cp", "./build", "/usr/share/nginx/html"\\
+            "nginx", "-g", "daemon off;"]
