[refactor] Changing build copying from /usr/share/nginx/html to /var/www/alexandre.doneux.eu/html

--- a/webapp/client/Dockerfile
+++ b/webapp/client/Dockerfile
@@ -36,5 +36,5 @@ EXPOSE 80 443
 #CMD ["npm", "start"]
 
 
-
-ENTRYPOINT ["/bin/sh","-c","npm run build && cp -r /client/build /usr/share/nginx/html && nginx -g \"daemon off;\""]
+# The -g option of NGINX is used for specifying NGINX flags, daemon off in this case.
+ENTRYPOINT ["/bin/sh","-c","npm run build && cp -r /client/build /var/www/alexandre.doneux.eu/html && nginx -g \"daemon off;\""]
