--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -1,15 +1,13 @@
-worker_processes 4;
+server {
+    listen 80 default_server;
+    root  /usr/share/nginx/html;
+    include /etc/nginx/mime.types;
 
-events { worker_connections 1024; }
+    location /appui {
+        try_files $uri /index.html;
+    }
 
-http {
-    server {
-        listen 80; #add 443, remove 80
-        root  /usr/share/nginx/html;
-        include /etc/nginx/mime.types;
-
-        location /appui {
-            try_files $uri /index.html;
-        }
+    location / {
+        return 404;
     }
 }
