--- a/webapp/client/Dockerfile
+++ b/webapp/client/Dockerfile
@@ -25,8 +25,8 @@ RUN npm install
 
 COPY ./.nginx/nginx.conf /etc/nginx/nginx.conf
 ## Remove default nginx index page
-RUN rm -rf /usr/share/nginx/html/*
-RUN mkdir /var/www/alexandre.doneux.eu/html
+##RUN rm -rf /usr/share/nginx/html/*
+RUN mkdir -p /var/www/alexandre.doneux.eu/html
 
 ##COPY --from=builder /client/build /usr/share/nginx/html
 
@@ -38,4 +38,4 @@ EXPOSE 80 443
 
 
 # The -g option of NGINX is used for specifying NGINX flags, daemon off in this case.
-ENTRYPOINT ["/bin/sh","-c","npm run build && cp -r /client/build /var/www/alexandre.doneux.eu/html && nginx -g \"daemon off;\""]
+ENTRYPOINT ["/bin/sh","-c","npm run build && cp -r /client/build/* /var/www/alexandre.doneux.eu/html && nginx -g \"daemon off;\""]
