--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -54,6 +54,7 @@ services:
       #KEY_PATH: $KEY_PATH
     volumes : 
       - ./client:/client
+      - ./client/sites-enabled:/etc/nginx/sites-enabled/
       - /etc/letsencrypt/archive/www.alexandre.doneux.eu:/client/www.alexandre.doneux.eu
       - /client/node_modules/
     ports:
