[fix] Replaced all the file by the "server" block in nginx.conf
The "server" block must be inside the "http" block.

--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -1,13 +1,19 @@
-server {
-    listen 80 default_server;
-    root  /usr/share/nginx/html;
-    include /etc/nginx/mime.types;
+worker_processes 4;
 
-    location /appui {
-        try_files $uri /index.html;
-    }
+events { worker_connections 1024; }
 
-    location / {
-        return 404;
+http {
+    server {
+        listen 80 default_server; # remove 80, add 443
+        root  /usr/share/nginx/html;
+        include /etc/nginx/mime.types;
+
+        location /appui {
+            try_files $uri /index.html;
+        }
+
+        location / {
+            return 404;
+        }
     }
 }
