[fix] /etc/nginx/sites-enabled/... was owned by node user and not root
Adding chown command in ENTRYPOINT in Dockerfile for frontend.

--- a/webapp/client/Dockerfile
+++ b/webapp/client/Dockerfile
@@ -38,4 +38,4 @@ EXPOSE 80 443
 
 
 # The -g option of NGINX is used for specifying NGINX flags, daemon off in this case.
-ENTRYPOINT ["/bin/sh","-c","npm run build && cp -r /client/build/* /var/www/alexandre.doneux.eu/html && nginx -g \"daemon off;\""]
+ENTRYPOINT ["/bin/sh","-c","npm run build && cp -r /client/build/* /var/www/alexandre.doneux.eu/html && chown root:root /etc/nginx/sites-enabled/www.alexandre.doneux.eu && nginx -g \"daemon off;\""]
