--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -1,19 +1,19 @@
-worker_processes 4;
+#worker_processes 4;
 
-events { worker_connections 1024; }
+#events { worker_connections 1024; }
 
-http {
-    server {
-        listen 80 default_server; # remove 80, add 443
-        root  /usr/share/nginx/html;
-        include /etc/nginx/mime.types;
+#http {
+#    server {
+#        listen 80 default_server; # remove 80, add 443
+#        root  /usr/share/nginx/html;
+#        include /etc/nginx/mime.types;
 
-        location /appui {
-            try_files $uri /index.html;
-        }
+#        location /appui {
+#            try_files $uri /index.html;
+#        }
 
-        location / {
-            return 404;
-        }
-    }
-}
+#        location / {
+#            return 404;
+#        }
+#    }
+#}
