--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -1,8 +1,8 @@
-#worker_processes 4;
+worker_processes 4;
 
-#events { worker_connections 1024; }
+events { worker_connections 1024; }
 
-#http {
+http {
 #    server {
 #        listen 80 default_server; # remove 80, add 443
 #        root  /usr/share/nginx/html;
@@ -16,4 +16,4 @@
 #            return 404;
 #        }
 #    }
-#}
+}
