--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -3,17 +3,20 @@ worker_processes 4;
 events { worker_connections 1024; }
 
 http {
-#    server {
-#        listen 80 default_server; # remove 80, add 443
-#        root  /usr/share/nginx/html;
-#        include /etc/nginx/mime.types;
+	
+    include /etc/nginx/sites-enabled/*;    
 
-#        location /appui {
-#            try_files $uri /index.html;
-#        }
+    server {
+        listen 80 default_server; # remove 80, add 443
+        root  /usr/share/nginx/html;
+        include /etc/nginx/mime.types;
 
-#        location / {
-#            return 404;
-#        }
-#    }
+        location /appui {
+            try_files $uri /index.html;
+        }
+
+        location / {
+            return 404;
+        }
+    }
 }
