[fix] volume for frontend container for all /etc/letsencrypt directory

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -56,7 +56,8 @@ services:
       - ./client:/client
       - ./client/sites-enabled:/etc/nginx/sites-enabled/
       - ./client/.nginx/nginx.conf:/etc/nginx/nginx.conf
-      - /etc/letsencrypt/archive/www.alexandre.doneux.eu:/client/www.alexandre.doneux.eu
+      - /etc/letsencrypt/:/etc/letsencrypt/    
+      #- /etc/letsencrypt/archive/www.alexandre.doneux.eu:/client/www.alexandre.doneux.eu
       - /client/node_modules/
     ports:
       - "80:80"
