[fix] Forgot listening on port 443 in nginx.conf and certificates names in sites-enabled/alexandre.doneux.eu

--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -8,6 +8,7 @@ http {
 
     server {
         listen 80 default_server; # remove 80, add 443
+        listen 443 default_server; 
         root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
