--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -1,23 +1,14 @@
 worker_processes 4;
 
-events { worker_connections 1024; }
+events {
+    worker_connections 1024;
+}
 
 http {
-	
-    include /etc/nginx/sites-enabled/*;    
+    include /etc/nginx/sites-enabled/*;
 
     server {
-        listen 80 default_server; # remove 80, add 443
-        listen 443 default_server; 
-        root  /usr/share/nginx/html;
-        include /etc/nginx/mime.types;
-
-        location /appui {
-            try_files $uri /index.html;
-        }
-
-        location / {
-            return 404;
-        }
+        listen 80 default_server;
+        return 301 https://$host$request_uri;
     }
 }
