[fix] serving index.html with nginx server when route is other than root (/)
 On the old config, when changing route the nginx server coulcn't find the files and gave a 404 error.

Adding to the config we want to serve index.html for any route (fallback line 9 in sites-enabled/alexandre.doneux.eu). It is needed because react router is in
charge of rendering a page and it is done in the index.html file in the website build.

--- a/webapp/docker-compose.yaml
+++ b/webapp/docker-compose.yaml
@@ -17,7 +17,6 @@ services:
       - ./db/dbScripts:/docker-entrypoint-initdb.d
       - ./db/my.cnf:/etc/mysql/my.cnf
     ports:
-      #- "5000:3306"
       - "3306:3306"
     networks:
       - api-db
@@ -57,10 +56,9 @@ services:
       - ./client/sites-enabled:/etc/nginx/sites-enabled/
       - ./client/.nginx/nginx.conf:/etc/nginx/nginx.conf
       - /etc/letsencrypt/:/etc/letsencrypt/    
-      #- /etc/letsencrypt/archive/www.alexandre.doneux.eu:/client/www.alexandre.doneux.eu
       - /client/node_modules/
     ports:
-      - "80:80"
+      - "80:80" #port 80 redirect to https
       - "443:443"
     depends_on:
       - mariadb 
