[feat] Adding ModSecurity WAF to frontend NGINX server
ModSecurity for NGINX need the libModSecurity and ModSecurity-nginx module to work. We also use the OWASP Core rule set as rules for that WAF.

--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -1,5 +1,7 @@
 worker_processes 4;
 
+load_module /opt/nginx-1.18.0/objs/ngx_http_modsecurity_module.so;
+
 events {
     worker_connections 1024;
 }
