[fix] Could not run shell script because user had not the permission to execute

--- a/webapp/client/Dockerfile
+++ b/webapp/client/Dockerfile
@@ -17,8 +17,8 @@ WORKDIR /client
 COPY package*.json ./
 
 COPY WAF.sh ./
-RUN ls
-RUN WAF.sh
+RUN chmod +x WAF.sh
+RUN ./WAF.sh
 
 # Install the dependencies
 RUN npm install
