--- a/webapp/client/.nginx/nginx.conf
+++ b/webapp/client/.nginx/nginx.conf
@@ -1,6 +1,7 @@
 worker_processes 4;
 
-load_module /opt/nginx-1.18.0/objs/ngx_http_modsecurity_module.so;
+#load_module /opt/nginx-1.18.0/objs/ngx_http_modsecurity_module.so;
+load_module modules/ngx_http_modsecurity_module.so; # testting 
 
 events {
     worker_connections 1024;
