--- a/webapp/api/package.json
+++ b/webapp/api/package.json
@@ -17,7 +17,9 @@
     "crypto-js": "^4.1.1",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
+    "hpp": "^0.2.3",
     "mariadb": "^3.1.1",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "toobusy-js": "^0.5.1"
   }
 }
