--- a/webapp/api/package.json
+++ b/webapp/api/package.json
@@ -19,5 +19,8 @@
     "express": "^4.18.2",
     "mariadb": "^3.1.1",
     "mysql": "^2.18.1"
+  },
+  "devDependencies": {
+    "jest": "^29.6.2"
   }
 }
