--- a/webapp/client/package.json
+++ b/webapp/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
