--- a/webapp/client/package.json
+++ b/webapp/client/package.json
@@ -8,7 +8,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "crypto-js": "^4.1.1",
@@ -55,9 +54,11 @@
   "devDependencies": {
     "@babel/preset-env": "^7.22.10",
     "@babel/preset-react": "^7.22.5",
+    "@testing-library/jest-dom": "^6.1.2",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.6.2",
-    "jest": "^27.5.1",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "react-dom": "^18.2.0",
     "react-test-renderer": "^18.2.0"
   }
